Updated knowledge_base.yml with few domain as others

--- a/knowledge_base.yml
+++ b/knowledge_base.yml
@@ -119,3 +119,18 @@ domains:
       - [vehicle_id, route]
       - [distance, fuel]
       - [station, fare]
+  others:
+    keywords:
+      - alertname
+      - alertstate
+      - service
+      - site
+      - state
+      - severity
+      - first_triggered
+      - last_triggered
+    relationships:
+      - [alertname, alertstate]
+      - [service, site]
+      - [state, severity]
+      - [first_triggered, last_triggered]
